--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -6,14 +7,14 @@
     <title>Arka's Resume</title>
     <link href="style.css" rel="stylesheet">
 </head>
+
 <body>
     <div class="container">
         <h1>Arkady Mospan</h1>
         <p><strong><span class="emphase">Chief Sroblem Prolver | Entrepreneur | Developer</span></strong></p>
         
         <div class="section">
-            <h2 onclick="toggleSection('about'); setTimeout(() => showDescription('aboutme'), 200);">
-<span class="brush-highlight">About Me</span></h2>
+            <h2 class="brush-highlight" onclick="toggleSection('about'); setTimeout(() => showDescription('aboutme'), 200);">About Me</h2>
             <div id="about" class="timeline-container" style="display: none;">
                 <div id="aboutme" class="description">
                     <span class="typing-full" style="--n:1000">
@@ -37,9 +38,9 @@
 
         </div>  
 
-        <!-- Education Section -->
+        <!-- Education -->
         <div class="section">
-            <h2 onclick="toggleSection('education')"><span class="brush-highlight">Education</span></h2>
+            <h2 class="brush-highlight" onclick="toggleSection('education')">Education</h2>
             <div id="education" class="timeline-container" style="display: none;">
                 <div class="timeline-item" onclick="showDescription('edu1')"><span class="timeline-date">2016-2019</span><br><strong>Bachelor's in Engineering Sciences</strong></div>
                 <div class="timeline-item" onclick="showDescription('edu2')"><span class="timeline-date">2020-2022</span><br><strong>Master's in Computer Engineering</strong></div>
@@ -48,25 +49,24 @@
             <div id="edu2" class="description"><span class="typing" style="--n:500">Turned over to the dark side of engineering by specializing in Computer Engineering. Did that in ULB (Université Libre de Bruxelles), with a major in <i>computational intelligence and optimization</i>, minor in <i>cybersecurity</i>. My thesis was then in a totally different field, as its title suggests: "Design of a force-feedback human-machine interface for an endoscopic application".</span></div>
         </div>
 
-
-        <!-- Experience Section -->  
+        <!-- Experience -->  
         <div class="section">
-            <h2 onclick="toggleSection('experience')"><span class="brush-highlight">Experience</span></h2>
+            <h2 class="brush-highlight" onclick="toggleSection('experience')">Experience</h2>
             <div id="experience" class="timeline-container" style="display: none;">
-                <div class="timeline-item" onclick="showDescription('desc1')"><span class="timeline-date">2016-2021</span><br><strong>Belgian Defence</strong></div>
-                <div class="timeline-item" onclick="showDescription('desc2')"><span class="timeline-date">2021-2023</span><br><strong>Events, Food & Beverages</strong></div>
-                <div class="timeline-item" onclick="showDescription('desc3')"><span class="timeline-date">2023-2025</span><br><strong>Entrepreneur</strong></div>
+                <div class="timeline-item" onclick="showDescription('beldef')"><span class="timeline-date">2016-2021</span><br><strong>Belgian Defence</strong></div>
+                <div class="timeline-item" onclick="showDescription('horeca')"><span class="timeline-date">2021-2023</span><br><strong>Events, Food & Beverages</strong></div>
+                <div class="timeline-item" onclick="showDescription('vietnam')"><span class="timeline-date">2023-2025</span><br><strong>Entrepreneur</strong></div>
             </div>
-            <div id="desc1" class="description"><span class="typing" style="--n:200">As students in the Royal Military Academy, we also are active members of the Belgian Defence. <br> I was a Non-Commissioned Officer from 2016 to 2019, and then took an oath and became an Officer.</span></div>
+            <div id="beldef" class="description"><span class="typing" style="--n:200">As students in the Royal Military Academy, we also are active members of the Belgian Defence. <br> I was a Non-Commissioned Officer from 2016 to 2019, and then took an oath and became an Officer.</span></div>
 
-            <div id="desc2" class="description"><span class="typing" style="--n:500">While finishing my Master's, and preparing for my long travel, I was flexi-jobbing in different places. <br> I was a bartender in the fancy <span class="emphase">C12</span> nightclub, a waiter for the delicious <span class="emphase">Gueuleton</span> caterer, and a multi-purpose staff for <span class="emphase">Hey Charlie.</span></span></div>
+            <div id="horeca" class="description"><span class="typing" style="--n:500">While finishing my Master's, and preparing for my long travel, I was flexi-jobbing in different places. <br> I was a bartender in the fancy <span class="emphase">C12</span> nightclub, a waiter for the delicious <span class="emphase">Gueuleton</span> caterer, and a multi-purpose staff for <span class="emphase">Hey Charlie.</span></span></div>
 
-            <div id="desc3" class="description"><span class="typing" style="--n:500">The initial purpose was to travel South-East Asia. Which I did, but while in Vietnam, I also founded a bar, then co-founded and managed another bar, and finally co-founded and managed a backpackers hostel, which is now one of the most popular in the region ! It's the <i><span class="emphase">Gecko Backpackers Hostel</span></i> in Tam Coc, Ninh Binh Region, Vietnam.</span></div>
+            <div id="vietnam" class="description"><span class="typing" style="--n:500">The initial purpose was to travel South-East Asia. Which I did, but while in Vietnam, I also founded a bar, then co-founded and managed another bar, and finally co-founded and managed a backpackers hostel, which is now one of the most popular in the region ! It's the <i><span class="emphase">Gecko Backpackers Hostel</span></i> in Tam Coc, Ninh Binh Region, Vietnam.</span></div>
         </div>
 
         <!-- Projects  --> 
         <div class="section">
-            <h2 onclick="toggleSection('projects')"><span class="brush-highlight">Projects</span></h2>
+            <h2 onclick="toggleSection('projects')" class="brush-highlight">Projects</h2>
             <div id="projects" class="timeline-container" style="display: none;">
                 <div class="timeline-item" onclick="showDescription('proj1')"><span class="timeline-date">2018</span><br><strong>Dassault UAV Challenge</strong></div>
                 <div class="timeline-item" onclick="showDescription('proj2')"><span class="timeline-date">2023</span><br><strong>FOSDEM</strong></div>
@@ -79,7 +79,7 @@
         </div>
 
 
-            <div class="section">
+        <div class="section">
             <h2 onclick="toggleSectionTwoCols('mySection')">
                 <span class="brush-highlight">Languages</span>
             </h2>
