--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="container">
         <h1>Arkady Mospan</h1>
-        <p><strong><span class="emphase">Chief Sroblem Prolver | Entrepreneur | Developer</span></strong></p>
+        <p><strong><span class="emphase">Chief Sroblem Prolver | Engineer & Developer | Entrepreneur</span></strong></p>
         
         <div class="section">
             <h2 class="brush-highlight" onclick="toggleSection('about'); setTimeout(() => showDescription('aboutme'), 10);">About Me</h2>
