--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
             <div class="timeline-item" onclick="showDescription('vehicle')"><span class="timeline-date">2020</span><br><strong>GC Vehicle</strong></div>
             <div class="timeline-item" onclick="showDescription('swarm')"><span class="timeline-date">2021</span><br><strong>Swarm Robotics</strong></div>
             <div class="timeline-item" onclick="showDescription('fortran')"><span class="timeline-date">2021</span><br><strong>Compiler Contributor</strong></div>
+            <div class="timeline-item" onclick="showDescription('website')"><span class="timeline-date">2023</span><br><strong>Website Maintainer</strong></div>
        
             </div>
 
@@ -97,6 +98,8 @@
             <div id="leukemia" class="description"><span class="typing" style="--n:500">Developed a deep learning model (Keras + CNNs) to classify blood cell images. My code could tell a lymphocyte from a monocyte quicker than I can say "hematopoiesis."</span></div>
 
             <div id="fortran" class="description"><span class="typing" style="--n:400">Contributed to an academic project rewriting a FORTRAN-to-LLVM compiler backend in Java. <br> Not quite building Skynet yet, but getting close.</span></div>
+
+            <div id="website" class="description"><span class="typing" style="--n:400">Updated and maintained the Cercle Informatique's website for a year. The website is <a href="https://cercle-informatique.be"><span class="emphase">live here</span></a>.</span></div>
         </div>
 
 
